	7621 Token_of_Ziegfried		Revive player on death (if item is in inventoy? Needs a clearer description)
	Still need proper rates for most 11.3 Equipment that don't have their +rates/Status Infliction rates clearly defined.
	13107 Western_Outlaw		Need correct HIT and ASPD Rate
	----
========================
08/04
	* Added missing /blackmith packet action to packet_db.txt
	* Removed "eathena's custom equipped mobs" from mob&skill db [ultramage]
08/01
	* Added the remaining arrow craftings [Playtester]
	* Added some of the new arrow craftings for testing purposes [Playtester]
	- some item names are still unknown, help needed
	- fixed an item name
	- more to come
07/30
	* Rev. 10932 Added several localized quest items to item_trade. [L0ne_W0lf]
	- Added some Rachel quest items as well as cash shop specific items to item_trade
	* Rev. 10931 Additional Pet Tames reverted again back to item-type 2 (recent commit by Ultramage fixes double-consumption) [L0ne_W0lf]
	* Rev. 10929 Added 1 slot to all coloured ribbons as pointed out by Elfange. [L0ne_W0lf]
07/28
	* Fixed monsters using Pneuma on target instead of self [Playtester]
07/27
	* Rev 10922 Fixed Black Ribbon's Aegis Name. (Ribbon -> Ribbon_Black) Thanks emc2boi. [L0ne_W0lf]
	* Fixed Neuralizer item script typo [ultramage]
07/26
	* Rev. 10917 Updated Cash Shop Skill Scrolls to behave more like official scrolls. [L0ne_W0lf]
	- Kafra Card, Neuralizer, Giant Fly Wing and Dungeon teleport scroll now call functions.
	  The functions for these items are found in /npc/other/CashShop_Functions.txt
	* Fixed Tidal Shoes missing HP bonus. (Thanks to ZephyrShakuraus)
	* Reverted change of Taming items item-type back to 11 because of a bug.
	* Fixed Fireball and Firewall mob skill level [Playtester]
07/24
	* Updated Venom Splasher's bomb timer [DracoRPG]
	* Added Job_Alchemist constant, Job_Alchem should now be considered deprecated [DracoRPG]
07/15
	* Rev. 10885 Fixed incorrect skill ID for Lady Tany's Expulsion. [L0ne_W0lf]